test-suite/samples/typeckr/pass/resolve-type-match/tables/value-validate.slt
type That = {
	len: (a: number) -> number,
} & {
	concat: () -> string,
}
local cool: That = {
	len = function()
		return 1
	end,
	concat = function()
		return ""
	end,
}