test-suite/samples/typeckr/fail/any-type/scenario-2.slt
local function that() end
local cool: () -> any = that()
local a: number = cool()